[package]
name = "tiny_id"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/paulgb/tiny_id"
license = "MIT OR Apache-2.0"
description = "Rust library for generating non-sequential, tightly-packed short IDs."

[features]
default = ["rand", "serde"]

[dependencies]
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0.130", optional = true, features=["derive"] }
