[package]
name = "tiny_id"
version = "0.1.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/paulgb/tiny_id"
license = "MIT OR Apache-2.0"
description = "Rust library for generating non-sequential, tightly-packed short IDs."

[features]
default = ["getrandom", "serialize"]
serialize = ["rand_chacha/serde1", "rand/serde1", "serde"]

[dependencies]
getrandom = { version = "0.2.3", optional = true }
rand = {version = "0.8.4", default_features = false}
rand_chacha = { version = "0.3.1" }
serde = { version = "1.0.130", optional = true, features=["derive"] }

[dev-dependencies]
serde_json = "1.0.73"
